feat: Implement Footer #3

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -8,5 +8,6 @@
     </head>
     <body>
         <include src="./layouts/header.html"></include>
+        <include src="./layouts/footer.html"></include>
     </body>
 </html>
