--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -7,6 +7,6 @@
         <link rel="stylesheet" href="../stylesheets/main.scss" />
     </head>
     <body>
-        
+        <include src="./layouts/main.html"></include>
     </body>
 </html>
