--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Practice HTML CSS</title>
     <link rel="stylesheet" href="../stylesheets/main.scss" />
+    <script src="../scripts/main.js"></script>
   </head>
   <body>
     <include src="./layouts/header.html"></include>
@@ -12,4 +13,3 @@
     <include src="./layouts/footer.html"></include>
   </body>
 </html>
-   
