--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -8,6 +8,7 @@
     </head>
     <body>
         <include src="./layouts/header.html"></include>
-        <include src="./layouts/footer.html"></include>
+    <include src="./layouts/main.html"></include>
+    <include src="./layouts/footer.html"></include>
     </body>
 </html>
